tests/agl/rejections/type/eq_type_mismatch.agl
let x = (1 = "one")
